delete 39 files and update 4 files

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,75 +1,56 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-:root {
-  font-size: 16px;
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  font-size: 100%;
 }
 
 body {
+  height: 100vh;
   font-family: "Roboto", sans-serif;
-  margin: 25px;
-  width: 100%;
-  overflow-x: hidden;
-  background-color: #f8f8f8;
 }
 
-h1, h2, h3 {
-  font-family: "Lora", serif;
+p {
+  color: #000;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.25rem;
+  font-weight: 400;
 }
 
-.commamita {
-  margin: auto;
+h1 {
+  color: #712b31;
+  font-size: 2rem;
+  font-weight: 900;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 1em;
 }
 
-iframe {
-  border: 0;
-  height: 800px;
+@media (min-width: 36em) {
+  h1 {
+    font-size: 2.6rem;
+  }
 }
 
-#website nav {
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 25px;
-  position: fixed;
-  background-color: #ffffff;
-  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
-          box-shadow: 0 0 0 1px #c9c9c9;
+h2 {
+  color: #000;
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
-#website nav img {
-  width: 20px;
-  margin: 2px;
-  height: auto;
-  float: right;
-  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
-          box-shadow: 0 0 0 1px #c9c9c9;
-}
-
-#website *:focus {
-  outline: none;
-}
-
-#website body {
-  margin: auto;
-  width: 50%;
-}
-
-#website h1,
-#website h2,
-#website h3 {
-  font-family: "Lora", serif;
-}
-
-#modal {
-  display: none;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
+header {
+  background-color: #712b31;
+  height: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -78,157 +59,150 @@ iframe {
           align-items: center;
 }
 
-.modal-content {
-  width: 50%;
-  padding: 25px;
-  border-radius: 15px;
-  background-color: #ffffff;
-  -webkit-box-shadow: #959da533 0 8px 24px;
-          box-shadow: #959da533 0 8px 24px;
-}
-
-@media (prefers-color-scheme: dark) {
-  .modal-content {
-    -webkit-box-shadow: #00000033 0 8px 24px;
-            box-shadow: #00000033 0 8px 24px;
+@media (min-width: 62em) {
+  header {
+    height: 80%;
   }
 }
 
-.modal-content section {
-  margin: 32px 0;
+.mobile-hero {
+  width: 80%;
 }
 
-.modal-content section h2 {
-  margin: 0 0 8px 0;
+@media (min-width: 36em) {
+  .mobile-hero {
+    display: none;
+  }
 }
 
-.modal-content section p {
-  margin: 8px 0;
+.desktop-hero {
+  display: none;
 }
 
-.close {
-  color: #000000;
-  float: right;
-  font-size: 28px;
-  font-weight: 700;
+@media (min-width: 36em) {
+  .desktop-hero {
+    display: block;
+    width: 85%;
+  }
 }
 
-.close:hover,
-.close:focus {
-  text-decoration: none;
-  cursor: pointer;
+@media (min-width: 48em) {
+  .desktop-hero {
+    width: 80%;
+  }
 }
 
-.cookie-consent {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: calc(100% - 20px);
-  height: 60px;
-  margin: 10px;
-  padding: 10px;
-  border: 1px solid #e5e5e5;
+@media (min-width: 75em) {
+  .desktop-hero {
+    width: 60%;
+  }
+}
+
+main {
+  margin: 3em 1em;
+}
+
+@media (min-width: 36em) {
+  main {
+    width: 85%;
+    margin: 3em auto;
+  }
+}
+
+@media (min-width: 48em) {
+  main {
+    width: 80%;
+    margin: 4em auto;
+  }
+}
+
+@media (min-width: 75em) {
+  main {
+    width: 60%;
+  }
+}
+
+.divider {
+  width: 6.25em;
+  height: 0.625em;
+  margin: 3em auto;
+  background-color: #712b31;
+}
+
+@media (min-width: 48em) {
+  .divider {
+    margin: 4em auto;
+  }
+}
+
+@media (min-width: 62em) {
+  .text {
+    width: 70%;
+    margin: auto;
+  }
+}
+
+.gallery {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr;
-      grid-template-rows: 1fr;
-  -ms-grid-columns: 1fr 150px 150px;
-      grid-template-columns: 1fr 150px 150px;
-  gap: 20px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  gap: 1em;
+  -ms-grid-rows: 3fr;
+      grid-template-rows: 3fr;
+  -ms-grid-columns: (1fr)[1];
+      grid-template-columns: repeat(1, 1fr);
 }
 
-#manage-cookies {
-  height: 40px;
-  border: none;
-  cursor: pointer;
+@media (min-width: 36em) {
+  .gallery {
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
 }
 
-#accept-all {
-  height: 40px;
-  background-color: #4f54ff;
-  border: none;
-  color: #ffffff;
-  cursor: pointer;
-}
-
-#editor nav {
-  padding: 10px;
-  padding-left: 20%;
-  display: inline;
-  position: fixed;
-  background-color: #ffffff;
-  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
-          box-shadow: 0 0 0 1px #c9c9c9;
-  left: 0;
-  top: 0;
+.img-1, .img-2, .img-3 {
   width: 100%;
+  height: 0;
+  padding-top: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
-#editor nav h1 {
-  width: 200px;
+.img-1 {
+  background-image: url("https://picsum.photos/500");
 }
 
-#editor nav button {
-  font-family: "Lora", serif;
+.img-2 {
+  background-image: url("https://picsum.photos/300");
 }
 
-#editor #text {
-  margin: auto;
-  margin-top: 5%;
-  color: black;
-  background-color: white;
-  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
-          box-shadow: 0 0 0 1px #c9c9c9;
-  padding: 40px;
-  width: 1000px;
-  height: 1400px;
+.img-3 {
+  background-image: url("https://picsum.photos/400");
 }
 
-#editor #text:focus {
-  outline: none;
+.testimonial {
+  margin: 2em 0;
 }
 
-#editor #counter {
-  position: fixed;
-  left: 10px;
-  bottom: 10px;
-  background-color: #ffffff;
-  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
-          box-shadow: 0 0 0 1px #c9c9c9;
-  border-radius: 5px;
-  padding: 10px;
-  width: 50px;
+@media (min-width: 62em) {
+  .testimonial {
+    width: 70%;
+    margin: 2em auto;
+  }
 }
 
-#invoice {
-  padding: 25px;
-  width: 50%;
-  background-color: #f8f8f8;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
-          box-shadow: 0 0 0 1px #c9c9c9;
+.testimonial p {
+  font-size: 1rem;
 }
 
-#invoice #paper {
-  padding: 20px;
-  background-color: #ffffff;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
-          box-shadow: 0 0 0 1px #c9c9c9;
+.contact p {
+  text-align: center;
+  margin: 0.5em 0;
 }
 
-#invoice nav {
-  padding-bottom: 10px;
-}
-
-#invoice input {
-  border: none;
-  margin: 5px;
-  background-color: #ffffff;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
-          box-shadow: 0 0 0 1px #c9c9c9;
+footer p {
+  text-align: center;
+  padding: 1em 0;
 }
