--- a/style.scss
+++ b/style.scss
@@ -43,7 +43,8 @@ h2 {
     color: #000;
     font-size: 1.5rem;
     font-weight: 700;
-    text-transform: uppercase;
+    text-align: center;
+    font-family: $heading;
 }
 
 header {
@@ -161,4 +162,16 @@ main {
 footer p {
     text-align: center;
     padding: 1em 0;
+}
+
+#cookies {
+    padding: 15px;
+    border-radius: 10px;
+    button {
+        background-color: rgb(32, 192, 32);
+        color: white;
+        padding: 10px;
+        border: none;
+        margin-left: 25px;
+    }
 }
