update style.css and style.scss

--- a/style.scss
+++ b/style.scss
@@ -167,6 +167,7 @@ footer p {
 #cookies {
     padding: 15px;
     border-radius: 10px;
+    background-color: white;
     button {
         background-color: rgb(32, 192, 32);
         color: white;
