--- a/docs/style.css
+++ b/docs/style.css
@@ -24,7 +24,7 @@ p {
 }
 
 h1 {
-  color: #712b31;
+  color: #000000;
   font-size: 2rem;
   font-weight: 900;
   text-align: center;
@@ -47,7 +47,7 @@ h2 {
 }
 
 header {
-  background-color: #712b31;
+  background-color: #000000;
   height: 30%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -127,7 +127,7 @@ main {
   width: 6.25em;
   height: 0.625em;
   margin: 3em auto;
-  background-color: #712b31;
+  background-color: #000000;
 }
 
 @media (min-width: 48em) {
