--- a/docs/style.css
+++ b/docs/style.css
@@ -46,24 +46,13 @@ h2 {
   font-family: "Lora", serif;
 }
 
-header {
-  background-color: #000000;
-  height: 30%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+nav {
+  background-color: black;
+  height: 75px;
+  display: fixed;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-@media (min-width: 62em) {
-  header {
-    height: 80%;
-  }
 }
 
 .mobile-hero {
