--- a/admin/editor/style.scss
+++ b/admin/editor/style.scss
@@ -34,6 +34,6 @@
         box-shadow: black;
         border-radius: 5px;
         padding: 10px;
-        width: 50px
+        width: 50px;
     }
 }
