--- a/style.scss
+++ b/style.scss
@@ -2,15 +2,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 $accent: #000000;
-$heading: 'Lora', serif;
-$text: 'Roboto', sans-serif;
+$heading: "Lora", serif;
+$text: "Roboto", sans-serif;
 
 @mixin shadow {
     box-shadow: #959da533 0 0.5em 1.5em;
     @media (prefers-color-scheme: dark) {
-      box-shadow: #00000033 0 0.5em 1.5em;
+        box-shadow: #00000033 0 0.5em 1.5em;
     }
-  }
+}
 
 * {
     margin: 0;
@@ -125,7 +125,9 @@ main {
     }
 }
 
-.img-1, .img-2, .img-3 {
+.img-1,
+.img-2,
+.img-3 {
     width: 100%;
     height: 0;
     padding-top: 100%;
