--- a/admin/style.scss
+++ b/admin/style.scss
@@ -3,8 +3,11 @@
 body {
     display: block;
     font-family: 'Roboto', sans-serif;
-    margin: 150px;
+}
+main {
+    margin: auto;
     width: 200px;
+    margin-top: 250px;
 }
 
 input {
@@ -37,4 +40,8 @@ input {
 p {
     color: grey;
     font-size: 12px;
+}
+
+a {
+    color: inherit;
 }
