--- a/admin/style.scss
+++ b/admin/style.scss
@@ -1,35 +1,49 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+$green: #6ab16a;
+
+.material-symbols-outlined {
+    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
+}
 
 body {
     display: block;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 main {
+    position: absolute;
     margin: auto;
+    vertical-align: center;
     width: 200px;
-    margin-top: 250px;
+    height: 200px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 input {
     display: block;
-    font-family: 'Roboto', sans-serif;
     border-radius: 5px;
-    border: none;
     padding: 10px;
     margin-bottom: 15px;
+    border: none;
     background-color: rgb(248, 248, 248);
     width: 200px;
-    cursor: text;
     &:focus {
-        outline: 2px rgb(106, 177, 106) solid;
+        outline: 2px $green solid;
     }
-    &[type=submit] {
-        background-color: rgb(106, 177, 106);
+    &[type="checkbox"] {
+        &:focus {
+            outline: none;
+        }
+    }
+    &[type="submit"] {
+        background-color: $green;
         color: white;
         width: 221px;
         &:hover {
             background-color: rgb(66, 136, 66);
-            cursor: pointer;
         }
         &:focus {
             outline: none;
@@ -44,4 +58,25 @@ p {
 
 a {
     color: inherit;
+    &:hover {
+        color: rgb(100, 100, 100);
+    }
+}
+
+#pass {
+    position: relative;
+    width: 200px;
+}
+
+#togglePassword {
+    position: absolute;
+    right: -7.5px;
+    cursor: pointer;
+    top: 8.5px;
+    font-size: 20px;
+    user-select: none;
+    color: grey;
+    &:hover {
+        color: rgb(100, 100, 100);
+    }
 }
