--- a/admin/login/style.css
+++ b/admin/login/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
 }
@@ -22,67 +23,58 @@ main {
 
 input {
   display: block;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 15px;
-  border: none;
-  background-color: #f8f8f8;
   width: 200px;
+  margin-bottom: 15px;
+  padding: 10px;
+  background-color: #f8f8f8;
+  border: none;
+  border-radius: 5px;
 }
 
-input:focus {
-  outline: 2px #6ab16a solid;
-}
-
-input[type="checkbox"]:focus {
-  outline: none;
+input[type="email"]:focus, input[type="password"]:focus {
+  outline: 2px solid #6ab16a;
 }
 
 input[type="submit"] {
-  background-color: #6ab16a;
   color: white;
+  background-color: #6ab16a;
   width: 221px;
+  cursor: pointer;
 }
 
 input[type="submit"]:hover {
   background-color: #428842;
 }
 
-input[type="submit"]:focus {
-  outline: none;
-}
-
-p {
-  color: grey;
-  font-size: 12px;
-}
-
-a {
-  color: inherit;
-}
-
-a:hover {
-  color: #646464;
-}
-
-#pass {
+div {
   position: relative;
-  width: 200px;
 }
 
-#togglePassword {
+div span {
   position: absolute;
   right: -7.5px;
-  cursor: pointer;
-  top: 8.5px;
+  top: 6px;
   font-size: 20px;
+  color: #808080;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  color: grey;
 }
 
-#togglePassword:hover {
+div span:hover {
+  color: #646464;
+}
+
+p {
+  font-size: 12px;
+  color: #808080;
+}
+
+p a {
+  color: inherit;
+}
+
+p a:hover {
   color: #646464;
 }
