update style.css and style.scss

--- a/admin/login/style.css
+++ b/admin/login/style.css
@@ -60,6 +60,7 @@ div span {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  cursor: pointer;
 }
 
 div span:hover {
