--- a/admin/login/style.scss
+++ b/admin/login/style.scss
@@ -61,6 +61,7 @@ div {
         font-size: 20px;
         color: $grey;
         user-select: none;
+        cursor: pointer;
         &:hover {
             color: $grey-hover;
         }
