--- a/admin/style.css
+++ b/admin/style.css
@@ -47,7 +47,7 @@ textarea:focus {
   background-color: #f3f3f3;
   position: absolute;
   border-radius: 5px;
-  border: black solid 1px;
+  border: none;
 }
 
 .menu-item {
