--- a/admin/style.scss
+++ b/admin/style.scss
@@ -51,7 +51,7 @@ textarea {
     background-color: #f3f3f3;
     position: absolute;
     border-radius: 5px;
-    border: black solid 1px;
+    border: none;
 }
 
 .menu-item {
