--- a/admin/style.css
+++ b/admin/style.css
@@ -32,7 +32,7 @@ textarea {
   font: inherit;
   height: 7rem;
   width: 100%;
-  padding: .8rem 1rem;
+  padding: 0.8rem 1rem;
   border-radius: 5px;
   border: none;
   background-color: #f8f8f8;
@@ -70,4 +70,81 @@ textarea:focus {
 
 .menu-item:hover:not(.selected) {
   background-color: #fafafa;
+}
+
+#myInput {
+  width: 100%;
+  /* Full-width */
+  font-size: 16px;
+  /* Increase font-size */
+  padding: 12px 20px 12px 20px;
+  /* Add some padding */
+  border: 1px solid #ddd;
+  /* Add a grey border */
+}
+
+#myUL {
+  /* Remove default list styling */
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#myUL li a {
+  border: 1px solid #ddd;
+  /* Add a border to all links */
+  margin-top: -1px;
+  /* Prevent double borders */
+  background-color: #f6f6f6;
+  /* Grey background color */
+  padding: 12px;
+  /* Add some padding */
+  text-decoration: none;
+  /* Remove default text underline */
+  font-size: 18px;
+  /* Increase the font-size */
+  color: black;
+  /* Add a black text color */
+  display: block;
+  /* Make it into a block element to fill the whole list */
+}
+
+#myUL li a:hover:not(.header) {
+  background-color: #eee;
+  /* Add a hover effect to all links, except for headers */
+}
+
+#search {
+  position: absolute;
+  margin: auto;
+  vertical-align: center;
+  width: 500px;
+  height: 100px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+#search input {
+  border-radius: 5px 5px 0px 0px;
+  padding: 12px 20px 12px 40px;
+  /* Add some padding */
+  background-image: url("./content/icons/search.svg");
+  /* Add a search icon to input */
+  background-position: 5px 5px;
+  /* Position the search icon */
+  background-repeat: no-repeat;
+  /* Do not repeat the icon image */
+}
+
+#search input:focus {
+  outline: none;
+}
+
+#search ul li {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
 }
