--- a/admin/style.css
+++ b/admin/style.css
@@ -124,27 +124,72 @@ textarea:focus {
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 10;
 }
 
 #search input {
+  width: 100%;
+  font-size: 16px;
   border-radius: 5px 5px 0px 0px;
-  padding: 12px 20px 12px 40px;
+  padding: 12px 20px 12px 20px;
   /* Add some padding */
-  background-image: url("./content/icons/search.svg");
-  /* Add a search icon to input */
-  background-position: 5px 5px;
-  /* Position the search icon */
-  background-repeat: no-repeat;
-  /* Do not repeat the icon image */
+  background-color: #f8f8f8;
+  border: none;
 }
 
 #search input:focus {
   outline: none;
 }
 
-#search ul li {
+#search div a {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  -ms-grid-columns: 1fr 9fr;
+      grid-template-columns: 1fr 9fr;
+      grid-template-areas: "icon title";
+  background-color: #f8f8f8;
+  text-decoration: none;
+}
+
+#search div a:hover {
+  background-color: #dddddd;
+}
+
+#search div a span {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: icon;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: gray;
+}
+
+#search div a p {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: title;
+  color: gray;
+}
+
+#search div a:last-child {
+  border-radius: 0px 0px 5px 5px;
+}
+
+#searchBG {
+  position: fixed;
+  margin: auto;
+  vertical-align: center;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.25);
+  z-index: 5;
 }
