--- a/admin/style.scss
+++ b/admin/style.scss
@@ -115,20 +115,54 @@ textarea {
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 10;
     input {
+        width: 100%;
+        font-size: 16px;
         border-radius: 5px 5px 0px 0px;
-        padding: 12px 20px 12px 40px; /* Add some padding */
-        background-image: url('./content/icons/search.svg'); /* Add a search icon to input */
-        background-position: 5px 5px; /* Position the search icon */
-        background-repeat: no-repeat; /* Do not repeat the icon image */
+        padding: 12px 20px 12px 20px; /* Add some padding */
+        background-color: $input;
+        border: none;
         &:focus {
             outline: none;
         }
     }
-    ul {
-        li {
+    div {
+        a {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr 9fr;
+            grid-template-areas: "icon title";
+            background-color: $input;
+            text-decoration: none;
+            &:hover {
+                background-color: #dddddd;
+            }
+            span {
+                grid-area: icon;
+                justify-content: center;
+                align-items: center;
+                display: flex;
+                color: gray;
+            }
+            p {
+                grid-area: title;
+                color: gray;
+            }
+        }
+        a:last-child {
+            border-radius: 0px 0px 5px 5px;
         }
     }
+}
+
+#searchBG {
+    position: fixed;
+    margin: auto;
+    vertical-align: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    display: none;
+    background-color: rgba(0,0,0, 0.25);;
+    z-index: 5;
 }
