--- a/admin/style.css
+++ b/admin/style.css
@@ -17,15 +17,14 @@
           box-sizing: inherit;
 }
 
-.container {
-  margin: 0 auto;
-  max-width: 80ch;
-  width: calc(100% - 4rem);
-}
-
 body {
   margin: 0;
   padding: 2rem 0;
+}
+
+main {
+  margin: auto;
+  width: 40%;
 }
 
 textarea {
@@ -117,9 +116,8 @@ textarea:focus {
 #search {
   position: absolute;
   margin: auto;
-  vertical-align: center;
+  margin-top: 20%;
   width: 500px;
-  height: 100px;
   top: 0;
   bottom: 0;
   left: 0;
