update admin/index.html, script.js, style.css and style.scss

--- a/admin/style.css
+++ b/admin/style.css
@@ -180,7 +180,7 @@ textarea:focus {
   border-radius: 0px 0px 5px 5px;
 }
 
-#searchBG {
+[data-comma="spotlight"] {
   position: fixed;
   margin: auto;
   vertical-align: center;
