--- a/admin/style.scss
+++ b/admin/style.scss
@@ -153,7 +153,7 @@ textarea {
     }
 }
 
-#searchBG {
+[data-comma="spotlight"] {
     position: fixed;
     margin: auto;
     vertical-align: center;
