--- a/admin/style.scss
+++ b/admin/style.scss
@@ -165,11 +165,16 @@ textarea {
     z-index: 5;
 }
 
-.key {
-    padding: 2px 4px;
-    font-size: 12px;
-    outline: rgb(189, 189, 189) solid 1px;
-    color: rgb(100, 100, 100);
-    border-radius: 5px;
-    background-color: $input;
+#keys {
+    display: inline-flex;
+    align-items: center;
+
+    kbd {
+        padding: 2px 4px;
+        font-size: 12px;
+        outline: #bdbdbd solid 1px;
+        color: #646464;
+        border-radius: 5px;
+        background-color: $input;
+    }    
 }
