update admin/index.html, style.css and style.scss

--- a/admin/style.scss
+++ b/admin/style.scss
@@ -105,9 +105,9 @@ textarea {
 }
 
 #search {
-    position: absolute;
+    position: fixed;
     margin: auto;
-    margin-top: 20%;
+    margin-top: 15%;
     width: 500px;
     top: 0;
     bottom: 0;
